MySQLが使えるようにDockerfileを設定

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -3,5 +3,6 @@ FROM python:3.8-alpine
 WORKDIR /api
 COPY requirement.txt /api/requirement.txt
 
-RUN pip install  -r /api/requirement.txt && python 
+RUN  apk add gcc mariadb-dev python3-dev  g++ libc-dev linux-headers &&\
+pip install  -r /api/requirement.txt 
 
